configMap2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  serviceAccountName: my-serviceaccount
  containers:
  - name: container-name
    image: container-image:version
    volumeMounts:
    - mountPath: "/var/run/secrets/eks.amazonaws.com/serviceaccount/"
      name: aws-token
    - mountPath: "/path/to/aws_config_dir"
      name: aws-config-configmap
  volumes:
  # This volume must be configured in the pod spec, since you're not relying on the webhook
  # to add it
  - name: aws-token
    projected:
      sources:
      - serviceAccountToken:
          audience: "sts.amazonaws.com"
          expirationSeconds: 86400
          path: token
  # This volume references the above AWS config file configMap
  - name: aws-config-configmap
    configMap:
      name: aws-config
      # makes the credential-process executable
      defaultMode: 0777
