statafulSet.yaml
apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: StatefulSet
metadata:
  name: web
  labels:
    app: nginx
spec:
  serviceName: "nginx"
  selector:
    matchLabels:
      app: nginx
  replicas: 14
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: registry.k8s.io/nginx-slim:0.8
        ports:
        - containerPort: 80
          name: web
        volumeMounts:   # this is the volume configuration which will be reference in the volumeClaimTemplates:
        - name: www
          mountPath: /usr/share/nginx/html
  volumeClaimTemplates:                           ## this the object for the volume claim configuration which will be part of the configuration of the statefulset
  - metadata:
      name:        #mongo-persistent-storage                                 ## normally we will create a storage file with and the name on that file should be reference here 
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
      storageClassName: thin-disk


      #mongo-persistent-storage  will be the value of the name in the storage filke


      replicas: 14 in this case 14 volumeClaimTemplates:    will be created 

      
      
kubectl get pvc we will see 14

We will have 14 pods running 

It is recommended to key DB outside of the cluster
